--- a/src/app/components/navbar/styles.module.css
+++ b/src/app/components/navbar/styles.module.css
@@ -128,6 +128,9 @@
 
 .nav-button:hover {
     opacity: 0.8;
+    border-radius: 9999px;
+    background-color: rgba(123, 97, 255, 0.21);
+    transition: all 300ms ease-in-out;
 }
 
 @media (max-width: 480px) {
@@ -223,7 +226,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-weight: 300;
     color: white;
     background: none;
