--- a/src/app/components/navbar/styles.module.css
+++ b/src/app/components/navbar/styles.module.css
@@ -172,9 +172,13 @@
     z-index: 50;
     display: flex;
     flex-direction: column;
-
     animation: fadeIn 0.3s ease-out;
     backdrop-filter: blur(8px);
+    padding-top: env(safe-area-inset-top);
+    padding-bottom: env(safe-area-inset-bottom);
+    padding-left: env(safe-area-inset-left);
+    padding-right: env(safe-area-inset-right);
+    box-sizing: border-box;
 }
 
 .mobile-header {
