--- a/src/app/views/home/styles.module.css
+++ b/src/app/views/home/styles.module.css
@@ -13,7 +13,7 @@
     min-height: 100vh;
     padding: 2rem;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
     color: white;
     box-sizing: border-box;
@@ -101,7 +101,7 @@
 
 .description {
     font-size: 1.2rem;
-    color: #b0b0b0;
+    color: #ccc;
     line-height: 1.6;
 }
 
