--- a/src/app/components/navbar/styles.module.css
+++ b/src/app/components/navbar/styles.module.css
@@ -1,4 +1,3 @@
-/* Animations */
 @keyframes fadeIn {
     from {
         opacity: 0;
@@ -100,7 +99,7 @@
     top: 0;
     height: 100%;
     border-radius: 9999px;
-    border: 2px solid #7b61ff;
+    border: 2px solid #6c87f5;
     transition: all 300ms ease-in-out;
     box-sizing: border-box;
     pointer-events: none;
