--- a/src/app/views/home/styles.module.css
+++ b/src/app/views/home/styles.module.css
@@ -86,6 +86,19 @@
     margin-top: 2rem;
 }
 
+/* Gradient typewriter effect */
+/*.typewriterTitle {*/
+/*    font-size: 6.5rem;*/
+/*    font-weight: bold;*/
+/*    font-family: monospace;*/
+/*    word-wrap: break-word;*/
+/*    margin-top: 2rem;*/
+/*    background: linear-gradient(90deg, #c3daff 0%, #8b9dc3 40%, #6b7280 70%, rgba(107, 114, 128, 0.3) 90%, transparent 100%);*/
+/*    -webkit-background-clip: text;*/
+/*    -webkit-text-fill-color: transparent;*/
+/*    background-clip: text;*/
+/*}*/
+
 .typewriterCursor {
     font-size: 3.5rem;
     color: #c3daff;
@@ -155,5 +168,10 @@
         display: block;
         margin-top: 2rem;
         width: 100%;
+    }
+
+    .homeSection {
+        min-height: 85vh;
+        padding-bottom: 9rem;
     }
 }
