--- a/src/app/components/layout/styles.module.css
+++ b/src/app/components/layout/styles.module.css
@@ -90,8 +90,7 @@
 }
 
 .nav-container {
-    background-color: rgba(255, 255, 255, 0.7);
-    border: 1px solid rgba(0, 0, 0, 0.12);
+    background-color: rgb(255, 255, 255);
     border-radius: 9999px;
     display: flex;
     align-items: center;
@@ -111,8 +110,7 @@
     top: 0;
     height: 100%;
     border-radius: 9999px;
-    /*border: 2px solid #91abfb;*/
-    background-color: rgba(145, 171, 251, 0.26);
+    background-color: #409cff3d;
     transition: all 300ms ease-in-out;
     box-sizing: border-box;
     pointer-events: none;
@@ -140,9 +138,8 @@
 }
 
 .nav-button:hover {
-    opacity: 0.8;
     border-radius: 9999px;
-    background-color: rgba(145, 171, 251, 0.26);
+    background-color: #409cff3d;
     transition: all 300ms ease-in-out;
 }
 
@@ -186,13 +183,13 @@
             no-repeat,
         linear-gradient(
                   0deg,
-                  rgba(0, 0, 0, 0.035) 1px,
+                  rgba(32, 103, 255, 0.14) 1px,
                   transparent 1px
              )
             0 0 / 28px 28px,
         linear-gradient(
                   90deg,
-                  rgba(0, 0, 0, 0.035) 1px,
+                  rgba(32, 103, 255, 0.14) 1px,
                   transparent 1px
              )
             0 0 / 28px 28px,
