--- a/src/app/components/layout/styles.module.css
+++ b/src/app/components/layout/styles.module.css
@@ -57,9 +57,9 @@
     left: 0;
     right: 0;
     z-index: 50;
-    background-color: rgb(242, 245, 248);
-    backdrop-filter: none;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.08);
+    background-color: transparent;
+    backdrop-filter: blur(2px);
+    /*border-bottom: 1px solid rgba(0, 0, 0, 0.08);*/
     display: flex;
     align-items: center;
     justify-content: center;
@@ -72,9 +72,8 @@
 }
 
 .headerScrolled {
-    background-color: rgba(242, 245, 248, 0.7);
-    backdrop-filter: blur(10px);
-    border-bottom: 1px solid rgba(0, 0, 0, 0.06);
+    backdrop-filter: blur(3px);
+    /*border-bottom: 1px solid rgba(0, 0, 0, 0.06);*/
     box-shadow: 0 10px 24px rgba(0, 0, 0, 0.08);
 }
 
